<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pink">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/warning_title"
            style="@style/AppTextAppearance.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/order_first_title" />

        <TextView
            android:id="@+id/warning_text"
            style="@style/AppTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/order_first_text" />

        <Button
            style="@style/AppTheme.Button"
            android:id="@+id/btn_first_order_accept"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="startHome"
            android:text="@string/order_first_accept_btn" />
        <Button
            style="@style/AppTheme.Button.Outlined"
            android:id="@+id/warnings_slide2_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="warningTwoBtnCancel"
            android:text="@string/button_cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>