<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pink"
    tools:context="jetzt.machbarschaft.android.view.order.OrderAcceptActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAcceptOrder"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/text_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_padding"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAcceptOrder">

        <TextView
            style="@style/AppTextAppearance.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/order_accept_title" />

        <TextView
            android:id="@+id/order_accept_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/AppTextAppearance"
            android:gravity="start"
            android:text="@string/order_accept_text" />

        <ImageView
            android:id="@+id/order_accept_iV_step1"
            android:background="@drawable/round_outline"
            android:layout_width="300dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:layout_height="300dp"
            app:srcCompat="@drawable/graphic_splash_screen" />

        <com.rd.PageIndicatorView
            android:id="@+id/pageIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:piv_animationType="scale"
            app:piv_dynamicCount="true"
            android:layout_marginTop="@dimen/screen_padding"
            app:piv_interactiveAnimation="true"
            app:piv_selectedColor="@color/background_blue"
            app:piv_unselectedColor="@android:color/darker_gray"
            />
        <Button
            style="@style/AppTheme.Button"
            android:id="@+id/btn_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_padding"
            android:text="@string/call_now" />

        <Button
            style="@style/AppTheme.Button.Outlined"
            android:id="@+id/order_accept_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Abbrechen" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>