<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pink"
    tools:context="jetzt.machbarschaft.android.view.order.OrderCarryOutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCarryOutOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/AppTextAppearance"
        app:titleTextColor="@color/text_white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/step_2_layout_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCarryOutOrder">

        <TextView
            android:id="@+id/step_3_title"
            style="@style/AppTextAppearance.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_padding"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/order_carry_out_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rd.PageIndicatorView
            android:id="@+id/pageIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btn_order_execute_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:piv_animationType="scale"
            app:piv_dynamicCount="true"
            android:layout_marginBottom="@dimen/screen_padding"
            app:piv_interactiveAnimation="true"
            app:piv_selectedColor="@color/background_blue"
            app:piv_unselectedColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_order_execute_now"
            style="@style/AppTheme.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_marginEnd="@dimen/screen_padding"
            android:text="@string/start_to_execute_now"
            app:layout_constraintBottom_toTopOf="@+id/btn_order_execute_later"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            style="@style/AppTheme.Button.Outlined"
            android:id="@+id/btn_order_execute_later"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_marginEnd="@dimen/screen_padding"
            android:text="@string/start_to_execute_later"
            app:layout_constraintBottom_toTopOf="@+id/btn_order_execute_failed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_order_execute_failed"
            style="@style/AppTheme.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_marginEnd="@dimen/screen_padding"
            android:text="Problem melden"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <TextView
            android:id="@+id/step_2_subtitle"
            style="@style/AppTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_carry_out_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_3_title" />

        <ImageView
            android:id="@+id/step_2_graphic"
            android:background="@drawable/round_outline_blue"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/screen_padding"
            android:layout_marginBottom="@dimen/screen_padding"
            app:layout_constraintBottom_toTopOf="@+id/btn_order_execute_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_2_subtitle"
            app:srcCompat="@drawable/graphic_order_step2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>